--- a/style.css
+++ b/style.css
@@ -403,7 +403,7 @@ main {
     align-items: center;
     justify-content: flex-start;
     gap: 1.2rem;
-    padding-top: 4.8rem;
+    padding-top: 1.2rem;
     padding-bottom: 2rem;       /* reserve space for fixed photo */
     box-sizing: border-box;
     z-index: 3;
@@ -414,16 +414,17 @@ main {
   body.about-page .about-codecard {
     width: 94%;
     max-width: none;
-    margin: 0 auto;
+    margin: 0 auto 1.5rem;
   }
 
   body.about-page .codecard-body {
-    height: calc(100svh - 10rem);
+    max-height: 70vh;          /* sane, predictable on phones */
     overflow-y: auto;
     text-align: left;
     padding-left: 1.6rem;
     padding-right: 1.6rem;
     padding-bottom: 5rem;
+    margin-bottom: 1.5rem;
   }
 
 
